# server

./: .env.template  Cargo.toml  docker-compose.yml  flake.nix
.github/workflows/: format.yml  lint.yml  test.yml
migrations/2026-04-10-143938-0000_create_tables/: up.sql
src/: api.rs  db.rs  errors.rs  main.rs
src/api/: accounts.rs
src/db/: schema.rs
src/db/models/: user.rs
