[package]
name = "enteec-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full"] }
diesel = { version = "2.3.7", features = ["postgres", "uuid", "chrono"] }
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4.44" }
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
argon2 = { version = "0.5.3" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
